rustdocs/errors/rust-bitcoin-bitcoin-src-hash_types.rs.txt
error[E0432]: unresolved imports `crate::BlockHash`, `crate::TxMerkleNode`, `crate::Txid`, `crate::WitnessCommitment`, `crate::WitnessMerkleNode`, `crate::Wtxid`
 --> ../rust-bitcoin/bitcoin/src/hash_types.rs:8:17
  |
8 | ...::{BlockHash, TxMerkleNode, Txid, WitnessCommitment, WitnessMerkleNode, Wtxid};
  |       ^^^^^^^^^  ^^^^^^^^^^^^  ^^^^  ^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^  ^^^^^ no `Wtxid` in the root
  |       |          |             |     |                  |
  |       |          |             |     |                  no `WitnessMerkleNode` in the root
  |       |          |             |     no `WitnessCommitment` in the root
  |       |          |             no `Txid` in the root
  |       |          no `TxMerkleNode` in the root
  |       no `BlockHash` in the root

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
